external-crates/move/crates/move-compiler/tests/move_check/expansion/use_inner_scope_duplicates.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
warning[W09001]: unused alias
   ┌─ tests/move_check/expansion/use_inner_scope_duplicates.move:13:43
   │
13 │         use 0x2::M::{check as foo, num as foo};
   │                                           ^^^ Unused 'use' of alias 'foo'. Consider removing it
   │
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/expansion/use_inner_scope_duplicates.move:13:43
   │
13 │         use 0x2::M::{check as foo, num as foo};
   │                               ---         ^^^ Duplicate module member or alias 'foo'. Top level names in a namespace must be unique
   │                               │            
   │                               Alias previously defined here

warning[W09001]: unused alias
   ┌─ tests/move_check/expansion/use_inner_scope_duplicates.move:15:23
   │
15 │         use 0x2::M as N;
   │                       ^ Unused 'use' of alias 'N'. Consider removing it
   │
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/expansion/use_inner_scope_duplicates.move:15:23
   │
14 │         use 0x2::M as N;
   │                       - Alias previously defined here
15 │         use 0x2::M as N;
   │                       ^ Duplicate module alias 'N'. Module aliases must be unique within a given namespace
